--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
 <div class="container">
   <h1 class="page-title">
     Aluraflix
